--- a/results/2021.md
+++ b/results/2021.md
@@ -1,62 +1,62 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-COVID19 | 720091
-VARZOS | 13909
-UNK | 9567
-FLU4 | 5195
-HPV9 | 1790
-VARCEL | 1729
-TDAP | 1630
-PPV | 1585
-HEPA | 1386
-MMR | 1377
-MNQ | 1365
-HEP | 1338
-FLUX | 1284
-MMRV | 1224
-PNC13 | 1064
-HIBV | 897
-DTAP | 761
-MENB | 753
-DTAPIPV | 742
-RV5 | 706
-FLUA4 | 681
-FLUC4 | 661
-DTAPIPVHIB | 568
-FLUR4 | 510
-DTAPHEPBIP | 425
-IPV | 408
-HEPAB | 191
-TYP | 190
-RAB | 183
-RV1 | 180
-FLU3 | 168
-TD | 162
-HPV4 | 138
-ANTH | 116
+COVID19 | 737587
+VARZOS | 14378
+UNK | 9826
+FLU4 | 5408
+HPV9 | 1833
+VARCEL | 1767
+TDAP | 1669
+PPV | 1627
+MMR | 1429
+HEPA | 1424
+MNQ | 1400
+HEP | 1386
+FLUX | 1365
+MMRV | 1240
+PNC13 | 1102
+HIBV | 933
+DTAP | 783
+MENB | 770
+DTAPIPV | 760
+RV5 | 733
+FLUA4 | 704
+FLUC4 | 695
+DTAPIPVHIB | 588
+FLUR4 | 536
+DTAPHEPBIP | 438
+IPV | 416
+HEPAB | 195
+TYP | 194
+RAB | 186
+RV1 | 185
+FLU3 | 174
+TD | 168
+HPV4 | 143
+ANTH | 119
 FLUA3 | 105
-YF | 95
+YF | 97
+FLUC3 | 66
 FLUN4 | 63
-FLUC3 | 63
 MEN | 53
-ADEN_4_7 | 42
+ADEN_4_7 | 43
 EBZR | 40
 TTOX | 37
+DF | 30
 CHOL | 28
-DF | 28
 SMALL | 27
 DT | 26
-PNC | 23
+PNC | 25
 HPVX | 22
+DTPPVHBHPB | 22
 JEV1 | 17
 DTP | 14
-DTPPVHBHPB | 14
-RVX | 12
+RVX | 13
 FLUX(H1N1) | 9
 6VAX-F | 8
+FLUN3 | 6
 BCG | 5
-FLUN3 | 5
 OPV | 2
 FLU(H1N1) | 2
 JEVX | 2
@@ -74,108 +74,108 @@ H5N1 | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-COVID19-MODERNA | 332173
-COVID19-PFIZER\BIONTECH | 323644
-COVID19-JANSSEN | 62704
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 9922
-UNK-UNKNOWN MANUFACTURER | 9566
-VARZOS-UNKNOWN MANUFACTURER | 3350
-FLU4-SANOFI PASTEUR | 2759
-HPV9-MERCK & CO. INC. | 1790
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1725
-VARCEL-MERCK & CO. INC. | 1706
-COVID19-UNKNOWN MANUFACTURER | 1570
-PPV-MERCK & CO. INC. | 1454
-MMR-MERCK & CO. INC. | 1343
-FLUX-UNKNOWN MANUFACTURER | 1260
-MMRV-MERCK & CO. INC. | 1219
-PNC13-PFIZER\WYETH | 1064
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 853
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 803
-MNQ-SANOFI PASTEUR | 776
-TDAP-SANOFI PASTEUR | 717
-FLU4-SEQIRUS, INC. | 711
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 708
-RV5-MERCK & CO. INC. | 706
-FLUA4-SEQIRUS, INC. | 681
-FLUC4-SEQIRUS, INC. | 661
-VARZOS-MERCK & CO. INC. | 637
-HEPA-MERCK & CO. INC. | 634
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 578
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 569
-DTAPIPVHIB-SANOFI PASTEUR | 566
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 539
-FLUR4-PROTEIN SCIENCES CORPORATION | 510
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 425
-HIBV-MERCK & CO. INC. | 382
-HIBV-SANOFI PASTEUR | 382
-IPV-SANOFI PASTEUR | 382
-DTAP-SANOFI PASTEUR | 349
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 338
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 244
-HEP-MERCK & CO. INC. | 225
-DTAPIPV-SANOFI PASTEUR | 200
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 184
-MENB-PFIZER\WYETH | 184
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 180
-HPV4-MERCK & CO. INC. | 138
-PPV-UNKNOWN MANUFACTURER | 131
-FLU3-SANOFI PASTEUR | 116
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 116
-TD-SANOFI PASTEUR | 113
-ANTH-EMERGENT BIOSOLUTIONS | 111
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 111
+COVID19-MODERNA | 339868
+COVID19-PFIZER\BIONTECH | 332034
+COVID19-JANSSEN | 64080
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 10200
+UNK-UNKNOWN MANUFACTURER | 9825
+VARZOS-UNKNOWN MANUFACTURER | 3521
+FLU4-SANOFI PASTEUR | 2852
+HPV9-MERCK & CO. INC. | 1833
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1805
+VARCEL-MERCK & CO. INC. | 1741
+COVID19-UNKNOWN MANUFACTURER | 1605
+PPV-MERCK & CO. INC. | 1493
+MMR-MERCK & CO. INC. | 1393
+FLUX-UNKNOWN MANUFACTURER | 1341
+MMRV-MERCK & CO. INC. | 1235
+PNC13-PFIZER\WYETH | 1102
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 871
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 833
+MNQ-SANOFI PASTEUR | 790
+FLU4-SEQIRUS, INC. | 751
+TDAP-SANOFI PASTEUR | 737
+RV5-MERCK & CO. INC. | 733
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 730
+FLUA4-SEQIRUS, INC. | 704
+FLUC4-SEQIRUS, INC. | 695
+VARZOS-MERCK & CO. INC. | 657
+HEPA-MERCK & CO. INC. | 646
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 599
+DTAPIPVHIB-SANOFI PASTEUR | 585
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 582
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 553
+FLUR4-PROTEIN SCIENCES CORPORATION | 536
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 438
+HIBV-MERCK & CO. INC. | 396
+HIBV-SANOFI PASTEUR | 396
+IPV-SANOFI PASTEUR | 389
+DTAP-SANOFI PASTEUR | 360
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 347
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 249
+HEP-MERCK & CO. INC. | 234
+DTAPIPV-SANOFI PASTEUR | 204
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 188
+MENB-PFIZER\WYETH | 188
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 185
+HPV4-MERCK & CO. INC. | 143
+PPV-UNKNOWN MANUFACTURER | 134
+FLU3-SANOFI PASTEUR | 118
+TD-SANOFI PASTEUR | 118
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 117
+ANTH-EMERGENT BIOSOLUTIONS | 114
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 112
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 105
+YF-SANOFI PASTEUR | 97
 TYP-BERNA BIOTECH, LTD. | 97
-YF-SANOFI PASTEUR | 95
-TYP-SANOFI PASTEUR | 91
-DTAP-UNKNOWN MANUFACTURER | 71
-HEP-UNKNOWN MANUFACTURER | 65
+TYP-SANOFI PASTEUR | 95
+DTAP-UNKNOWN MANUFACTURER | 73
+HEP-UNKNOWN MANUFACTURER | 69
+RAB-SANOFI PASTEUR | 66
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 66
 FLUN4-MEDIMMUNE VACCINES, INC. | 63
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 63
-TDAP-UNKNOWN MANUFACTURER | 60
-RAB-SANOFI PASTEUR | 59
+TDAP-UNKNOWN MANUFACTURER | 61
 MEN-UNKNOWN MANUFACTURER | 50
-HEPA-UNKNOWN MANUFACTURER | 44
-ADEN_4_7-TEVA PHARMACEUTICALS | 42
+HEPA-UNKNOWN MANUFACTURER | 47
+ADEN_4_7-TEVA PHARMACEUTICALS | 43
 EBZR-MERCK & CO. INC. | 40
 TTOX-UNKNOWN MANUFACTURER | 36
-MMR-UNKNOWN MANUFACTURER | 33
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 31
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 35
+MMR-UNKNOWN MANUFACTURER | 35
+DF-SANOFI PASTEUR | 30
 TD-MASS. PUB HLTH BIOL LAB | 29
-DF-SANOFI PASTEUR | 28
 CHOL-PAXVAX | 27
+PNC-PFIZER\WYETH | 25
+IPV-UNKNOWN MANUFACTURER | 25
 SMALL-SANOFI PASTEUR | 25
 FLUX-SANOFI PASTEUR | 24
-IPV-UNKNOWN MANUFACTURER | 24
-PNC-PFIZER\WYETH | 23
-HIBV-UNKNOWN MANUFACTURER | 22
+HIBV-UNKNOWN MANUFACTURER | 23
 HPVX-UNKNOWN MANUFACTURER | 22
+VARCEL-UNKNOWN MANUFACTURER | 22
+DTPPVHBHPB-MSP VACCINE COMPANY | 22
 DT-SANOFI PASTEUR | 20
-VARCEL-UNKNOWN MANUFACTURER | 20
-TD-UNKNOWN MANUFACTURER | 19
+TD-UNKNOWN MANUFACTURER | 20
 JEV1-INTERCELL AG | 17
-DTPPVHBHPB-MSP VACCINE COMPANY | 14
+RVX-UNKNOWN MANUFACTURER | 13
 DTP-UNKNOWN MANUFACTURER | 13
-RVX-UNKNOWN MANUFACTURER | 12
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 12
 MNQ-UNKNOWN MANUFACTURER | 11
 FLU3-CSL LIMITED | 9
 FLUX(H1N1)-UNKNOWN MANUFACTURER | 9
 RAB-UNKNOWN MANUFACTURER | 8
 DT-UNKNOWN MANUFACTURER | 6
+FLUN3-MEDIMMUNE VACCINES, INC. | 6
 ANTH-UNKNOWN MANUFACTURER | 5
 MMRV-UNKNOWN MANUFACTURER | 5
 HEPAB-UNKNOWN MANUFACTURER | 5
-FLUN3-MEDIMMUNE VACCINES, INC. | 5
 6VAX-F-UNKNOWN MANUFACTURER | 5
 BCG-SANOFI PASTEUR | 4
+VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 4
 DTAPIPV-UNKNOWN MANUFACTURER | 3
-VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 3
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 3
 DTAP-SMITHKLINE BEECHAM | 3
 MEN-SANOFI PASTEUR | 3
 TYP-UNKNOWN MANUFACTURER | 2
-DTAPIPVHIB-UNKNOWN MANUFACTURER | 2
 OPV-UNKNOWN MANUFACTURER | 2
 SMALL-UNKNOWN MANUFACTURER | 2
 HEPAB-SMITHKLINE BEECHAM | 2
@@ -205,30 +205,32 @@ IPV-PFIZER\WYETH | 1
 HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 1
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 1
 H5N1-SANOFI PASTEUR | 1
+HIBV-CONNAUGHT LABORATORIES | 1
+HEPA-SMITHKLINE BEECHAM | 1
 ---
 # Total Deaths
 Vax Type | Deaths
 --- | ---
-COVID19 | 11020
-UNK | 181
-VARZOS | 48
-FLU4 | 39
+COVID19 | 11467
+UNK | 189
+VARZOS | 51
+FLU4 | 40
 FLUX | 24
-PNC13 | 18
-HEP | 11
-HIBV | 11
-PPV | 8
-DTAPIPVHIB | 8
-RAB | 6
-DTAPHEPBIP | 6
-RV5 | 6
+PNC13 | 22
+HEP | 13
+HIBV | 12
+DTAPIPVHIB | 11
+PPV | 9
+RV5 | 8
+DTAPHEPBIP | 7
+RV1 | 6
 HEPA | 5
 MMR | 5
 VARCEL | 4
 TDAP | 4
 DTAP | 4
 HPV9 | 4
-RV1 | 4
+RAB | 2
 MMRV | 2
 MEN | 2
 FLUA4 | 2
@@ -243,37 +245,37 @@ FLUC3 | 1
 ---
 Vax ID | Deaths
 --- | ---
-COVID19-PFIZER\BIONTECH | 5324
-COVID19-MODERNA | 4540
-COVID19-JANSSEN | 1116
-UNK-UNKNOWN MANUFACTURER | 181
+COVID19-PFIZER\BIONTECH | 5503
+COVID19-MODERNA | 4699
+COVID19-JANSSEN | 1225
+UNK-UNKNOWN MANUFACTURER | 189
 COVID19-UNKNOWN MANUFACTURER | 40
 FLU4-SANOFI PASTEUR | 30
 FLUX-UNKNOWN MANUFACTURER | 23
-VARZOS-UNKNOWN MANUFACTURER | 19
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 18
-PNC13-PFIZER\WYETH | 18
-VARZOS-MERCK & CO. INC. | 11
-DTAPIPVHIB-SANOFI PASTEUR | 8
-PPV-MERCK & CO. INC. | 7
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 6
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 6
-RV5-MERCK & CO. INC. | 6
+PNC13-PFIZER\WYETH | 22
+VARZOS-UNKNOWN MANUFACTURER | 20
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 19
+VARZOS-MERCK & CO. INC. | 12
+DTAPIPVHIB-SANOFI PASTEUR | 11
+PPV-MERCK & CO. INC. | 8
+RV5-MERCK & CO. INC. | 8
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 7
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6
+HIBV-MERCK & CO. INC. | 6
+HEP-MERCK & CO. INC. | 6
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 6
 MMR-MERCK & CO. INC. | 5
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 5
-HIBV-MERCK & CO. INC. | 5
-HEP-MERCK & CO. INC. | 5
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 5
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 4
 VARCEL-MERCK & CO. INC. | 4
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 4
 HPV9-MERCK & CO. INC. | 4
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 4
 FLU4-SEQIRUS, INC. | 4
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 3
 HIBV-SANOFI PASTEUR | 3
 DTAP-SANOFI PASTEUR | 3
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 3
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 2
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 MMRV-MERCK & CO. INC. | 2
 MEN-UNKNOWN MANUFACTURER | 2
 FLUA4-SEQIRUS, INC. | 2
@@ -294,66 +296,66 @@ FLUX-SANOFI PASTEUR | 1
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 3126973
-VARZOS | 45704
-UNK | 38124
-FLU4 | 19103
-PPV | 6174
-TDAP | 5769
-HPV9 | 5444
-VARCEL | 4476
-MNQ | 4093
-PNC13 | 4010
-FLUX | 4009
-MMR | 3968
-HEP | 3475
-HEPA | 3452
-MMRV | 2832
-HIBV | 2717
-FLUC4 | 2679
-DTAP | 2638
-MENB | 2573
-FLUA4 | 2482
-RV5 | 1969
-DTAPIPV | 1898
-DTAPIPVHIB | 1629
-FLUR4 | 1507
-DTAPHEPBIP | 1378
-IPV | 1085
-HPV4 | 768
-RAB | 679
-RV1 | 614
-ANTH | 593
-FLU3 | 577
-TD | 528
-HEPAB | 512
-TYP | 483
+COVID19 | 3202163
+VARZOS | 47175
+UNK | 39154
+FLU4 | 19931
+PPV | 6341
+TDAP | 5897
+HPV9 | 5533
+VARCEL | 4641
+FLUX | 4283
+MNQ | 4167
+PNC13 | 4132
+MMR | 4080
+HEP | 3601
+HEPA | 3543
+MMRV | 2899
+FLUC4 | 2811
+HIBV | 2801
+DTAP | 2688
+MENB | 2626
+FLUA4 | 2540
+RV5 | 2062
+DTAPIPV | 1937
+DTAPIPVHIB | 1691
+FLUR4 | 1563
+DTAPHEPBIP | 1408
+IPV | 1113
+HPV4 | 824
+RV1 | 630
+FLU3 | 609
+ANTH | 605
+RAB | 578
+TD | 551
+HEPAB | 516
+TYP | 488
 FLUA3 | 437
-YF | 294
+YF | 296
+FLUC3 | 254
 FLUN4 | 249
-FLUC3 | 247
 SMALL | 240
 EBZR | 199
-ADEN_4_7 | 183
-DF | 173
+ADEN_4_7 | 187
+DF | 176
 MEN | 124
 CHOL | 116
 TTOX | 116
-PNC | 100
+PNC | 105
 DT | 74
 HPVX | 70
-RVX | 66
+RVX | 68
 JEV1 | 65
 JEVX | 59
 DTP | 47
-DTPPVHBHPB | 36
+DTPPVHBHPB | 47
 FLUX(H1N1) | 35
 FLUR3 | 21
 6VAX-F | 20
+FLUN3 | 12
 OPV | 11
 BCG | 10
 FLU(H1N1) | 10
-FLUN3 | 8
 TDAPIPV | 7
 PER | 6
 HEPATYP | 6
@@ -367,99 +369,99 @@ DTPHEP | 1
 ---
 Vax ID | Symptoms
 --- | ---
-COVID19-MODERNA | 1414339
-COVID19-PFIZER\BIONTECH | 1406219
-COVID19-JANSSEN | 299605
-UNK-UNKNOWN MANUFACTURER | 38117
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 35678
-FLU4-SANOFI PASTEUR | 9775
-VARZOS-UNKNOWN MANUFACTURER | 8226
-COVID19-UNKNOWN MANUFACTURER | 6810
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6334
-PPV-MERCK & CO. INC. | 5724
-HPV9-MERCK & CO. INC. | 5444
-VARCEL-MERCK & CO. INC. | 4422
-PNC13-PFIZER\WYETH | 4010
-FLUX-UNKNOWN MANUFACTURER | 3971
-MMR-MERCK & CO. INC. | 3805
-FLU4-SEQIRUS, INC. | 2994
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2820
-MMRV-MERCK & CO. INC. | 2818
-TDAP-SANOFI PASTEUR | 2723
-FLUC4-SEQIRUS, INC. | 2679
-FLUA4-SEQIRUS, INC. | 2482
-MNQ-SANOFI PASTEUR | 2452
-RV5-MERCK & CO. INC. | 1969
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1813
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1812
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 1805
-VARZOS-MERCK & CO. INC. | 1800
-DTAPIPVHIB-SANOFI PASTEUR | 1626
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1599
-FLUR4-PROTEIN SCIENCES CORPORATION | 1507
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1378
-HEPA-MERCK & CO. INC. | 1369
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1296
-DTAP-SANOFI PASTEUR | 1293
-HIBV-MERCK & CO. INC. | 1120
-HIBV-SANOFI PASTEUR | 1076
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1024
-IPV-SANOFI PASTEUR | 981
-HPV4-MERCK & CO. INC. | 768
-MENB-PFIZER\WYETH | 761
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 718
-HEP-MERCK & CO. INC. | 647
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 614
-DTAPIPV-SANOFI PASTEUR | 593
-ANTH-EMERGENT BIOSOLUTIONS | 520
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 489
-PPV-UNKNOWN MANUFACTURER | 450
+COVID19-MODERNA | 1446451
+COVID19-PFIZER\BIONTECH | 1442907
+COVID19-JANSSEN | 305839
+UNK-UNKNOWN MANUFACTURER | 39147
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 36652
+FLU4-SANOFI PASTEUR | 10179
+VARZOS-UNKNOWN MANUFACTURER | 8674
+COVID19-UNKNOWN MANUFACTURER | 6966
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6595
+PPV-MERCK & CO. INC. | 5877
+HPV9-MERCK & CO. INC. | 5533
+VARCEL-MERCK & CO. INC. | 4581
+FLUX-UNKNOWN MANUFACTURER | 4245
+PNC13-PFIZER\WYETH | 4132
+MMR-MERCK & CO. INC. | 3910
+FLU4-SEQIRUS, INC. | 3157
+MMRV-MERCK & CO. INC. | 2885
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2877
+FLUC4-SEQIRUS, INC. | 2811
+TDAP-SANOFI PASTEUR | 2785
+FLUA4-SEQIRUS, INC. | 2540
+MNQ-SANOFI PASTEUR | 2482
+RV5-MERCK & CO. INC. | 2062
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1875
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 1857
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1854
+VARZOS-MERCK & CO. INC. | 1849
+DTAPIPVHIB-SANOFI PASTEUR | 1685
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1643
+FLUR4-PROTEIN SCIENCES CORPORATION | 1563
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1408
+HEPA-MERCK & CO. INC. | 1393
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1323
+DTAP-SANOFI PASTEUR | 1312
+HIBV-MERCK & CO. INC. | 1144
+HIBV-SANOFI PASTEUR | 1104
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1050
+IPV-SANOFI PASTEUR | 1007
+HPV4-MERCK & CO. INC. | 824
+MENB-PFIZER\WYETH | 772
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 733
+HEP-MERCK & CO. INC. | 692
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 630
+DTAPIPV-SANOFI PASTEUR | 605
+ANTH-EMERGENT BIOSOLUTIONS | 532
+PPV-UNKNOWN MANUFACTURER | 464
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 437
-FLU3-SANOFI PASTEUR | 407
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 395
-DTAP-UNKNOWN MANUFACTURER | 318
-TYP-SANOFI PASTEUR | 318
-TD-SANOFI PASTEUR | 309
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 306
-HEP-UNKNOWN MANUFACTURER | 303
-YF-SANOFI PASTEUR | 294
-HEPA-UNKNOWN MANUFACTURER | 270
+FLU3-SANOFI PASTEUR | 418
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 399
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 373
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 333
+DTAP-UNKNOWN MANUFACTURER | 323
+TYP-SANOFI PASTEUR | 323
+TD-SANOFI PASTEUR | 322
+HEP-UNKNOWN MANUFACTURER | 317
+YF-SANOFI PASTEUR | 296
+HEPA-UNKNOWN MANUFACTURER | 274
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 254
 FLUN4-MEDIMMUNE VACCINES, INC. | 249
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 247
-TDAP-UNKNOWN MANUFACTURER | 226
-HIBV-UNKNOWN MANUFACTURER | 215
+TDAP-UNKNOWN MANUFACTURER | 235
+HIBV-UNKNOWN MANUFACTURER | 217
 SMALL-SANOFI PASTEUR | 204
 EBZR-MERCK & CO. INC. | 199
-ADEN_4_7-TEVA PHARMACEUTICALS | 183
-DF-SANOFI PASTEUR | 173
-MMR-UNKNOWN MANUFACTURER | 161
-RAB-SANOFI PASTEUR | 148
+ADEN_4_7-TEVA PHARMACEUTICALS | 187
+DF-SANOFI PASTEUR | 176
+MMR-UNKNOWN MANUFACTURER | 168
+RAB-SANOFI PASTEUR | 163
 TYP-BERNA BIOTECH, LTD. | 130
 CHOL-PAXVAX | 114
+TD-UNKNOWN MANUFACTURER | 114
 MEN-UNKNOWN MANUFACTURER | 110
 TTOX-UNKNOWN MANUFACTURER | 109
 TD-MASS. PUB HLTH BIOL LAB | 109
-TD-UNKNOWN MANUFACTURER | 104
-PNC-PFIZER\WYETH | 100
-IPV-UNKNOWN MANUFACTURER | 76
+PNC-PFIZER\WYETH | 105
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 84
+IPV-UNKNOWN MANUFACTURER | 78
 ANTH-UNKNOWN MANUFACTURER | 73
 HPVX-UNKNOWN MANUFACTURER | 70
-RVX-UNKNOWN MANUFACTURER | 66
+RVX-UNKNOWN MANUFACTURER | 68
 JEV1-INTERCELL AG | 65
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 63
 HEPAB-UNKNOWN MANUFACTURER | 61
 DT-SANOFI PASTEUR | 60
 JEVX-UNKNOWN MANUFACTURER | 59
 HEPAB-SMITHKLINE BEECHAM | 56
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 54
 FLU3-CSL LIMITED | 53
-VARCEL-UNKNOWN MANUFACTURER | 48
+VARCEL-UNKNOWN MANUFACTURER | 53
+DTPPVHBHPB-MSP VACCINE COMPANY | 47
 DTP-UNKNOWN MANUFACTURER | 43
 RAB-UNKNOWN MANUFACTURER | 42
 MNQ-UNKNOWN MANUFACTURER | 42
 FLUX-SANOFI PASTEUR | 38
 SMALL-UNKNOWN MANUFACTURER | 36
-DTPPVHBHPB-MSP VACCINE COMPANY | 36
 TYP-UNKNOWN MANUFACTURER | 35
 FLUX(H1N1)-UNKNOWN MANUFACTURER | 35
 FLUR3-PROTEIN SCIENCES CORPORATION | 21
@@ -467,19 +469,20 @@ IPV-PASTEUR MERIEUX CONNAUGHT | 18
 DT-UNKNOWN MANUFACTURER | 14
 MMRV-UNKNOWN MANUFACTURER | 14
 MEN-SANOFI PASTEUR | 14
+FLUN3-MEDIMMUNE VACCINES, INC. | 12
 OPV-UNKNOWN MANUFACTURER | 11
 IPV-PFIZER\WYETH | 10
 DTAPIPV-UNKNOWN MANUFACTURER | 9
 6VAX-F-UNKNOWN MANUFACTURER | 9
 BCG-SANOFI PASTEUR | 8
-FLUN3-MEDIMMUNE VACCINES, INC. | 8
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 8
 TDAPIPV-UNKNOWN MANUFACTURER | 7
+VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 7
 UNK-MERCK & CO. INC. | 7
 TTOX-SANOFI PASTEUR | 7
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 6
 PER-UNKNOWN MANUFACTURER | 6
 TD-GLAXOSMITHKLINE BIOLOGICALS | 6
-VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 6
 HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 6
 FLU(H1N1)-SANOFI PASTEUR | 5
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 5
@@ -487,15 +490,16 @@ MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 5
 DTP-SANOFI PASTEUR | 4
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 4
 H5N1-SANOFI PASTEUR | 4
-DTAPIPVHIB-UNKNOWN MANUFACTURER | 3
 DTAP-SMITHKLINE BEECHAM | 3
 6VAX-F-SANOFI PASTEUR | 3
 DTOX-UNKNOWN MANUFACTURER | 3
 MU-UNKNOWN MANUFACTURER | 3
+HIBV-CONNAUGHT LABORATORIES | 3
 CHOL-UNKNOWN MANUFACTURER | 2
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 2
 BCG-UNKNOWN MANUFACTURER | 2
 HEP-SMITHKLINE BEECHAM | 2
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTPHEP-UNKNOWN MANUFACTURER | 1
+HEPA-SMITHKLINE BEECHAM | 1
 ---
